# mlink

./: .gitignore  AGENTS.md  CONTRIBUTE.md  LICENSE  README.md
.github/workflows/: ci.yml
clients/desktop-data-viewer/: Makefile  README.md  config.json  go.mod
clients/desktop-data-viewer/cmd/desk-link/: main.go
clients/desktop-data-viewer/internal/config/: config.go
clients/desktop-data-viewer/internal/gui/: cocoa_gui.h  cocoa_gui.m  gui.go
clients/desktop-data-viewer/internal/mqtt/: client.go
device/firmware/: CMakeLists.txt  Kconfig  Makefile  README.md  local.conf.example  mender_key.pem  prj.conf
device/firmware/boards/: esp32c6_devkitc.conf  esp32c6_devkitc.overlay  rpi_pico.overlay  rpi_pico_rp2040_w.conf  rpi_pico_rp2040_w.overlay
device/firmware/include/: environment_sensor.hpp  filter.hpp  mender_client.hpp  mqtt_connection.hpp  mqtt_publisher.hpp  network_connection.hpp  noop_publisher.hpp  runner.hpp  sensor_reading.hpp  status_light.hpp  telemetry_publisher.hpp
device/firmware/src/: environment_sensor_bme280.cpp  environment_sensor_noop.cpp  filter.cpp  main.cpp  mender_client.cpp  mqtt_connection.cpp  mqtt_publisher.cpp  network_connection_noop.cpp  network_connection_wifi.cpp  runner.cpp  status_light_gpio.cpp  status_light_noop.cpp  status_light_strip.cpp
device/firmware/tests/filter/: CMakeLists.txt  prj.conf
device/firmware/tests/filter/src/: main.cpp
docs/: 00-technical-overview.md  01-hardware-setup.md  02-firmware-guide.md  02-firmware.md  03-infrastructure-guide.md  03-infrastructure.md  analysis.md  memory-review.md
docs/design/: ota.md
docs/playbooks/: esp32-setup.md  mender-playbook.md
infrastructure/cloud/network/: main.tf  outputs.tf  terraform.tfstate  variables.tf
infrastructure/cloud/services/: main.tf  providers.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
infrastructure/stack/: Makefile  README.md  docker-compose.cloud.yml  docker-compose.local.yml  docker-compose.yml
infrastructure/stack/alertmanager/: alertmanager.yml
infrastructure/stack/mosquitto/config/: mosquitto.cloud.conf  mosquitto.conf
infrastructure/stack/telegraf/: telegraf.conf
infrastructure/stack/vmalert/: rules.yml
